force-app/main/default/src/objects/HealthCloudGA__IndividualRecordTypeMapper__mdt/fields/HealthCloudGA__ContactRecordType__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ContactRecordType__c</fullName>
    <label>Contact Record Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>