force-app/main/default/src/objects/HealthCloudGA__IndividualRecordTypeMapper__mdt/fields/HealthCloudGA__ContactRecordTypeNamespace__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ContactRecordTypeNamespace__c</fullName>
    <label>Record Type Namespace (Contact)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>