force-app/main/default/src/objects/HealthCloudGA__IndividualRecordTypeMapper__mdt/fields/HealthCloudGA__DetailPage__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DetailPage__c</fullName>
    <label>Detail Page</label>
    <length>200</length>
    <type>Text</type>
</CustomField>