force-app/main/default/src/objects/HealthCloudGA__IndividualRecordTypeMapper__mdt/fields/HealthCloudGA__IndividualType__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IndividualType__c</fullName>
    <description>Account Type</description>
    <label>Account SubType</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>