force-app/main/default/src/objects/HealthCloudGA__IndividualRecordTypeMapper__mdt/fields/HealthCloudGA__LeadRecordType__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LeadRecordType__c</fullName>
    <description>Record type on Lead object</description>
    <label>Lead Record Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>