force-app/main/default/src/objects/HealthCloudGA__IndividualRecordTypeMapper__mdt/fields/HealthCloudGA__LeadRecordTypeNamespace__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LeadRecordTypeNamespace__c</fullName>
    <label>Record Type Namespace (Lead)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>