force-app/main/default/src/objects/HealthCloudGA__IndividualRecordTypeMapper__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>HealthCloudGA__LeadRecordType__c</columns>
    <columns>HealthCloudGA__AccountRecordType__c</columns>
    <columns>HealthCloudGA__ContactRecordType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>